# edgelab

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/architecture/: cloud-readiness.md  data-architecture.md  system-architecture.md
docs/domain/: backtesting-principles.md  candidate-equity-screener.md  historical-intraday-data-and-replay.md  intraday-index-futures-research-spike.md  model-portfolio-engine.md  (+4 more)
tests/: test_app_health.py  test_backtesting_api.py  test_backtesting_engine.py  test_backtesting_metrics.py  test_backtesting_schema.py  test_candidate_api.py  test_candidate_cards.py  test_candidate_schema.py  test_candidate_scoring.py  test_candidate_screener.py  test_comparative_study.py  test_discovery_api.py  test_discovery_cards.py  test_discovery_genealogy.py  test_discovery_ledger.py  test_discovery_library.py  test_discovery_schema.py  test_discovery_sprint.py  test_discovery_sprint_api.py  test_docs_exist.py  test_firstrate_csv_normalizer.py  test_firstrate_history_api.py  test_firstrate_replay_integration.py  test_historical_intraday_api.py  test_historical_intraday_provider.py  test_historical_intraday_schema.py  test_historical_replay_api.py  test_historical_replay_cards.py  test_historical_replay_engine.py  test_historical_replay_schema.py  test_idea_batch_api.py  test_idea_batch_runner.py  test_idea_batch_schema.py  test_intraday_api.py  test_intraday_benchmarks_candles.py  test_intraday_fixtures.py  test_intraday_prop_accounts_cards.py  test_intraday_schema.py  test_intraday_setups_simulator.py  test_market_data_api.py  (+38 more)
(+175 files in other folders)
